--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "bootstrap": "3.3.7",
     "broccoli-asset-rev": "^2.4.2",
+    "ember": "1.0.0-pre.2",
     "ember-ajax": "^2.0.1",
     "ember-bootstrap": "0.9.1",
     "ember-cli": "2.7.0",
